# rcwa_solver

./: .gitignore  CMakeLists.txt  README.md  pretty_trace.pl  pretty_trace.py
include/: Eigensystems.hpp  IRA.hpp  RS.h  RS_internal.h  S4.h  S4_internal.h  Types.hpp  config.h  gsel.h  numalloc.h  rcwa.h  sort.h
include/RNP/: TBLAS.h  TLASupport.h
include/fmm/: fft_iface.h  fmm.h
include/pattern/: intersection.h  pattern.h
pkgconfig/: rcwasolver.pc  rcwasolver.pc.in
src/: Eigensystems.cpp  RS.cpp  S4.cpp  gsel.c  numalloc.c  rcwa.cpp  sort.c
src/RNP/: Eigensystems.cpp
src/fmm/: fft_iface.cpp  fmm_FFT.cpp  fmm_PolBasisJones.cpp  fmm_PolBasisNV.cpp  fmm_PolBasisVL.cpp  fmm_closed.cpp  fmm_common.cpp  fmm_experimental.cpp  fmm_kottke.cpp
src/pattern/: intersection.c  pattern.c
tests/: example.cpp
